--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PayTrack</string>
+    <string name="openDrawer">open drawe</string>
+    <string name="closeDrawer">close drawer</string>
 </resources>
